# SimpleOpenTranslator

./: README.md  bert-translate.py  bert.py  madlad400.py  main.py  pyproject.toml  test.py
classification/: moj.py  mojv2.py
concept/: bert-translate.py  findMultipleLanguages.py  madlad400-7b.py  microsoft-test.py  test-facebook.py  test.py
utils/: const_var.py  simple_language_detector.py  simple_language_translator.py
