[tool.poetry]
name = "simpleopentranslator"
version = "0.1.0"
description = ""
authors = ["adam <adam.wk@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
