[tool.poetry]
name = "simpleopentranslator"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
torchaudio = "^2.2.1"
lingua-language-detector = "^2.0.2"
transformers = "^4.39.1"
sentencepiece = "^0.2.0"
accelerate = "^0.28.0"
protobuf = "^5.26.0"
datasets = "^2.18.0"
peft = "^0.10.0"
evaluate = "^0.4.1"
numpy = "1.26.4"
torch = {version = "^2.3.1+cu121", source = "pytorch-gpu"}
torchvision = {version = "^0.18.1+cu121", source = "pytorch-gpu"}


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
